--- a/frontend/src/language/ur.json
+++ b/frontend/src/language/ur.json
@@ -9,31 +9,15 @@
   "large": "بڑا",
   "light": "ہلکا",
   "dark": "گہرا",
-  "interview_page_heading": "بسکٹ انٹرویو",
+  "interview_page_heading": "RIO: Automated CLT",
   "end_message": "انٹرویو میں حصہ لینے کا شکریہ!",
   
-  "S3": "آپ کی جنس کیا ہے؟ مرد — 1، عورت — 2",
-  "S4": "اپنی عمر بتائیں۔",
-  "S5": "براہِ مہربانی یہ بتائیں کہ آپ زیادہ تر کس طرح کے بسکٹ کھاتے/کھاتی ہیں؟ سینڈوچ بسکٹ، سادہ بسکٹ، نمکین بسکٹ، یا دیگر؟",
-  "S6": "براہِ مہربانی یہ بتائیں کہ آپ Sandwich Biscuit کس کثرت سے کھاتے/کھاتی ہیں؟ ہفتے میں 1 یا اس سے زیادہ، مہینے میں 2 سے 3 دفعہ، اس سے بھی زیادہ عرصے میں، یا نہیں کھاتا/کھاتی؟",
-  "S7": "براہِ مہربانی یہ بتائیں کہ آپ نے کن کن برانڈز کے Sandwich Biscuit کھائے ہیں؟ اکلیپس بسکٹ، پرنس بسکٹ، ریو بسکٹ، لیمن سینڈوچ یا چاکلیٹ سینڈوچ، یا دیگر؟",
-  "S8": "براہِ مہربانی یہ بتائیں کہ آپ نے پچھلے 3 مہینے میں اکلیپس (Eclipse) بسکٹ کھایا ہے؟ تقریباً 3–4 مہینے سے پہلے کھاتے تھے، جی ہاں کھاتے ہیں، یا نہیں کھایا کبھی؟",
-  "S8a": "اگر آپ نے اکلیپس (Eclipse) بسکٹ نہیں کھایا تو، براہِ مہربانی بتائیں کہ آپ نے اس کے متبادل میں کون سا بسکٹ برانڈ اپنایا؟",
-  "S8b": "اگر آپ Eclipse بسکٹ نہیں کھاتے اور کسی دوسرے برانڈ کا انتخاب کیا ہے تو، براہِ مہربانی بتائیں کہ آپ اس برانڈ کو کیوں استعمال کرتے ہیں؟",
-  "S9": "برائے مہربانی یہ بتائیے کہ آپ کے گھرانے کے معاشی سربراہ نے کہاں تک تعلیم حاصل کی؟",
-  "S10": "برائے مہربانی یہ بتائیے کہ آپ کے گھرانے کے سربراہ کا پیشہ کیا ہے؟",
-  "Q1": "برائے مہربانی بتائیں کہ آپ نے آخری بار جو بسکٹ کھایا، اس کا ظاہری رنگ و شکل آپ کو کیسا لگا؟ اپنا جواب 1 سے 7 کے اسکیل پر دیں – جہاں 1 کا مطلب ہے بالکل بھی پسند نہیں آیا اور 7 کا مطلب ہے بہت پسند آیا۔",
-  "Q4b": "برائے مہربانی بتائیں کہ آپ نے آخری بار جو بسکٹ کھایا، اس کا رنگ آپ کی پسند کے مطابق کیسا تھا؟ 1 کا مطلب ہے میری پسند سے بہت ہلکا، اور 5 کا مطلب ہے میری پسند سے بہت گہرا۔",
-  "Q5b": "برائے مہربانی بتائیں کہ آپ نے آخری بار جو بسکٹ کھایا، اس کا سائز آپ کی پسند کے مطابق کیسا تھا؟ 1 کا مطلب ہے میری پسند سے بہت چھوٹا، اور 5 کا مطلب ہے میری پسند سے بہت بڑا۔",
-  "Q6a": "برائے مہربانی بتائیں کہ آپ نے آخری بار جو بسکٹ کھایا، مجموعی طور پر آپ کو کیسا لگا؟ 1 سے 9 کے اسکیل پر۔ جہاں 1 کا مطلب ہے بالکل بھی پسند نہیں آیا اور 9 کا مطلب ہے بہت پسند آیا۔",
-  "Q6b": "اگر آپ نے محسوس کیا کہ یہ بسکٹ پسند نہیں آیا تو، براہِ مہربانی بتائیں کہ کیوں؟ تفصیل سے بیان کریں۔",
-  "Q7a": "برائے مہربانی بتائیں کہ آپ نے آخری بار جو بسکٹ کھایا، اس کا ذائقہ آپ کو کس حد تک پسند آیا؟ 1 سے 7 کے اسکیل پر۔ جہاں 1 کا مطلب ہے بالکل بھی پسند نہیں آیا اور 7 کا مطلب ہے بہت پسند آیا۔",
-  "Q7b": "اگر آپ نے محسوس کیا کہ ذائقہ پسند نہیں آیا تو، براہِ مہربانی بتائیں کہ کیوں؟ تفصیل سے بیان کریں۔",
-  "Q9b": "برائے مہربانی بتائیں کہ آپ نے آخری بار جو بسکٹ کھایا، اس کی مٹھاس آپ کی پسند کے مطابق کیسی تھی؟ 1 کا مطلب ہے میری پسند سے بہت کم، اور 5 کا مطلب ہے میری پسند سے بہت زیادہ۔",
-  "Q10b": "برائے مہربانی بتائیں کہ آپ نے آخری بار جو بسکٹ کھایا، اس کی خستگی آپ کی پسند کے مطابق کیسی تھی؟ 1 کا مطلب ہے میری پسند سے بہت کم خستہ، اور 5 کا مطلب ہے میری پسند سے بہت زیادہ خستہ۔",
-  "Q13": "اب میں آپ سے آخری بار جو بسکٹ کھایا، اس کی قیمت کے حوالے سے چند سوال پوچھوں گا۔ اگر یہ پروڈکٹ 2 بسکٹ کے پیکٹ میں 30 روپے میں دستیاب ہو، تو کیا آپ اسے خریدیں گے؟ جی ہاں خریدوں گا/گی — 1، نہیں خریدوں گا/گی — 2، شاید / کچھ کہ نہیں سکتا — 3",
-  "Q15": "یہ پیکیجنگ دیکھ کر کیا لگ رہا ہے کہ یہ کس چیز کی پیکیجنگ ہے؟ یہ کسی بسکٹ برانڈ کی پیکیجنگ لگ رہی ہے — 1، یہ کسی کیک برانڈ کی پیکیجنگ لگ رہی ہے — 2، یہ کسی چاکلیٹ بار کی پیکیجنگ لگ رہی ہے — 3، یہ کسی سویٹس / کنفیکشنری آئٹم کی پیکیجنگ لگ رہی ہے — 4، سمجھ نہیں آ رہا کہ کس چیز کی پیکیجنگ ہے — 5، یا دیگر — 6",
-  "Q15a": "اگر آپ نے کہا کہ یہ بسکٹ برانڈ کی پیکیجنگ نہیں لگ رہی، تو ہم اس میں کیا بہتر کریں تاکہ یہ بسکٹ برانڈ کی پیکیجنگ لگے؟ رنگ زیادہ دلکش / نمایاں کیے جا سکتے ہیں — 1، بسکٹ کی تصویر واضح یا بڑی ہو سکتی ہے — 2، ڈیزائن میں تبدیلی یا pattern بڑھایا جا سکتا ہے — 3، برانڈ کا نام یا لوگو زیادہ نمایاں ہونا چاہیے — 4، پیکنگ پر flavour یا type واضح لکھا ہونا چاہیے — 5، کچھ بھی بہتر کرنے کی ضرورت نہیں — 6، یا دیگر — 7",
-  "Q15b": "اگر آپ نے کہا کہ یہ بسکٹ برانڈ کی پیکیجنگ لگ رہی ہے، تو براہِ مہربانی بتائیں کہ کس قسم کے بسکٹ کی پیکیجنگ لگ رہی ہے؟",
-  "Q17": "ان دونوں میں سے کون سی پیکیجنگ آپ کے بسکٹ خریدنے کے فیصلے پر زیادہ اثر انداز ہوتی ہے؟ اور کیوں؟"
+  "1": "آپ کا جینڈر کیا ہے؟ مرد یا عورت",
+  "2": "اپنی عمر بتائیں۔",
+  "3": "آپ کو ریو بسکٹ دیکھنے میں کیسا لگا؟\n 1 سے 7 کے اسکیل پر بتائیں، جہاں 1 کا مطلب ہے 'بالکل بھی پسند نہیں آیا' اور 7 کا مطلب ہے 'بہت پسند آیا'۔",
+  "4": "برائے مہربانی بتائیں کہ آپ کو ریو  کا ذائقہ کس حد تک پسند آیا؟\n 1 سے 7 کے اسکیل پر جہاں 1 کا مطلب ہے بالکل بھی پسند نہیں آیا اور 7 کا مطلب ہے بہت پسند آیا۔",
+  "5": "مجموعی طور پر آپ کو ریو  کیسا لگا؟\n 1 سے 9 کے اسکیل پر بتائیں، جہاں 1 کا مطلب ہے 'بالکل بھی پسند نہیں آیا' اور 9 کا مطلب ہے 'بہت پسند آیا'۔",
+  "6": "آپ کے جواب سے لگتا ہے آپ کو ریو  نہیں پسند آیا۔ برائے مہربانی تفصیل سے بتائیں کیوں پسند نہیں آیا؟",
+  "7": "اگر ریو بسکٹ کے 2 بسکٹ کا پیک 30 روپے میں دستیاب ہو، تو کیا آپ اسے خریدیں گے؟\n 1 - جی ہاں خریدوں گا،\n 2 - نہیں خریدوں گا،\n 3 - شاید یا کچھ کہہ نہیں سکتا۔",
+  "8": "کیا آپ ریو  کے بارے میں کچھ اور کہنا چاہیں گے یا کوئی مشورہ دینا چاہیں گے؟"
 }
